# statz

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
.github/workflows/: R-CMD-check.yaml  rust-tests.yaml
R/: causal.R  descriptive.R  distributions.R  extendr-wrappers.R  linear_models.R
man/: descriptive.Rd  print.z_dsc.Rd  summary.z_dsc.Rd  z_cor.Rd  z_cor_onepass.Rd  z_cov.Rd  z_covariance.Rd  z_dgamma.Rd  z_dgamma_rs.Rd  z_dinvgauss.Rd  z_dinvgauss_rs.Rd  z_dnorm.Rd  z_dnorm_rs.Rd  z_dpois.Rd  z_dpois_rs.Rd  z_dsc.Rd  z_dtweedie.Rd  z_dtweedie_rs.Rd  z_eigen.Rd  z_lgamma.Rd  z_lm.Rd  z_lm_chol.Rd  z_lm_naive.Rd  z_lm_qr.Rd  z_mean.Rd  z_median.Rd  z_pgamma.Rd  z_pgamma_rs.Rd  z_pinvgauss.Rd  z_pinvgauss_rs.Rd  z_pnorm.Rd  z_pnorm_as.Rd  z_pnorm_std.Rd  z_ppois.Rd  z_ppois_di.Rd  z_ppois_rec.Rd  z_ptweedie.Rd  z_ptweedie_rs.Rd  z_sd.Rd  z_sum.Rd  (+3 more)
src/: Makevars.in  Makevars.win.in  entrypoint.c  statz-win.def
src/rust/: Cargo.toml  document.rs
src/rust/src/: archive.rs  causal.rs  descriptive.rs  distributions.rs  lib.rs  linear_models.rs
tests/: testthat.R
tests/testthat/: test-causal.R  test-descriptive.R  test-distributions.R  test-linear-models.R
