[package]
name = 'statz'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'statz'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = "0.9.0"
statrs = "0.18.0"
libm = "0.2.16"
faer = "0.24.0"

[profile.release]
lto = true
codegen-units = 1
